frontend/app/style.css
html,
body {
    height: 100%;
    width: 100%;
}

html,
* {
    margin: 0;
    padding: 0;
}

/* wrapper */

.wrapper {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

/* titlebar */

.titlebar {
    background-color: #202225;
    height: 22px;
    -webkit-app-region: drag;
    -webkit-user-select: none;
    user-select: none;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;

    flex-grow: 0;
    flex-shrink: 0;
}

#minimize,
#maximize,
#close {
    -webkit-app-region: no-drag;
    height: 22px;
    width: 28px;
    border: none;
    background: none;
    color: #9A9795;
    cursor: pointer;
}

#minimize:hover,
#maximize:hover {
    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.3);
}

#close:hover {
    box-shadow: inset 0 0 100px 100px rgba(255, 0, 0, 0.9);
}

#minimize:focus,
#maximize:focus,
#close:focus {
    outline: none
}

/* ok */

.actualbody {
    display: flex;

    flex-grow: 1;
    flex-shrink: 1;
}

/* servers list */
.serverslist {
    background-color: #202225;
    flex-grow: 0;
    flex-shrink: 0;
    width: 72px;
    padding-top: 4px;
    display: flex;
    flex-direction: column-reverse;
    justify-content: flex-end;
    align-items: center;
}

.guild {
    height: 48px;
    margin-bottom: 8px;
}

.guildIcon {
    width: 48px;
    height: 48px;
    border-radius: 50%;
}

.guildIcon:hover {
    animation: guildHover 0.25s forwards;
}

@keyframes guildHover {
    100% {
        border-radius: 25%;
    }
}

/* main part */
.mainpart {
    display: flex;
    flex-direction: column;

    flex-grow: 1;
    flex-shrink: 1;
}

/* top part of main */
.tpart {
    background-color: crimson;
    height: 48px;
    display: flex;
    flex-shrink: 0;
    flex-grow: 0;
    filter: drop-shadow(0 1px rgba(32, 34, 37, 0.5))
}

.channeltop {
    background-color: #2F3136;
    width: 240px;
    display: flex;
    flex-shrink: 0;
    flex-grow: 0;
}

.middletop {
    background-color: #36393F;
    flex-grow: 1;
    flex-shrink: 1
}

/* bottom part of main */
.bpart {
    background-color: beige;
    display: flex;
    flex-shrink: 1;
    flex-grow: 1;
}

/* channels */
.channels {
    background-color: #2F3136;
    width: 240px;
    flex-shrink: 0;
    flex-grow: 0;

    display: flex;
    flex-direction: column;
}

.channelslist {
    flex-grow: 1;
    flex-shrink: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* the actual channel itself */

.channel {
    color: #7B7F85;
    background-color: #2F3136;
    width: 224px;
    height: 34px;
    border-radius: 4px;
    margin-left: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.channelName {
    font-size: 16px;
    line-height: 20px;
    margin-left: 6px;
    width: 142px;
}

.channel:hover {
    color: white;
    background-color: #42464D;
}

.status {
    background-color: #292B2F;
    height: 68px;
    filter: drop-shadow(0 1px #36393F);

    flex-grow: 0;
    flex-shrink: 0;
}

/* ur profile (bottom part of channels) */

.profile {
    color: white;
    background-color: #292B2F;
    height: 52px;
    display: flex;
    flex-direction: row;
    align-items: center;

    flex-grow: 0;
    flex-shrink: 0;
}

.botIcon {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    margin-left: 8px;
    margin-right: 8px;
}

.botName {
    font-size: 14px;
}

/* msgpart */
.msgpart {
    background-color: #36393F;
    flex-grow: 1;
    flex-shrink: 1;
    
    display: flex;
    flex-direction: column;
}

.msgcontainer {
    background-color: #36393F;
    flex-grow: 1;
    flex-shrink: 1;
}

/*
.msgcontainer::-webkit-scrollbar {
    width: 15px;
}

.msgcontainer::-webkit-scrollbar-track {
    box-shadow: inset 0 0 10px 10px #2E3338;
    border: solid 4px transparent;
    border-radius: 10px;
}

.msgcontainer::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 10px 10px #202225;
    border: solid 4px transparent;
    border-radius: 10px;
}
*/

/* where u can type messages */

.inputsection {
    display: flex;
    
    padding-left: 16px;
    padding-right: 16px;
    height: 68px;
}

#attachfile{
    background-color: #48444c;
    height: 44px;
    width: 56px;
    border: none;

    cursor: pointer;
}

#inputbox {
    background-color: #48444c;
    height: 44px;
    outline: none;
    border: none;
}

/* memberslist */
.memberslist {
    background-color: #2F3136;
    width: 240px;
    flex-shrink: 0;
    flex-grow: 0;
}

